--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,16 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
     
+    <form class="search-form" id="search-form">
+      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button type="submit" class="search">Search</button>
+    </form>
+
+      <div class="container">
+        <div class="gallery"></div>
+      </div>
+
+    <button type="button" class="load-more" style="display:none">Load more</button>
+
   </body>
 </html>
